# auth-rs

./: .gitignore  Cargo.toml  README.md  Rocket.toml  package.json  tsconfig.json
auth/: Cargo.toml
auth/migrations/2020-06-15-134822_add_refresh_token_column/: up.sql
auth/migrations/2020-06-27-102148_create_sessions/: down.sql  up.sql
auth/src/: lib.rs
auth_web/: Cargo.toml
auth_web/src/: main.rs
auth_web/src/routes/: tokens.rs  users.rs
data/: Cargo.toml
data/migrations/2020-06-15-065726_create_users/: up.sql
data/src/: lib.rs  schema.rs
data/src/models/: mod.rs  sessions.rs  tokens.rs  users.rs
data/src/repositories/: sessions.rs  users.rs
frontend/: config.example.ts  config.ts  index.html  index.ts
web/: Cargo.toml
web/src/: main.rs
web/src/routes/: tokens.rs  users.rs
www/: index.html
