[package]
name = "auth"
version = "1.0.0"
authors = ["Nina Lisitsinskaya <vvatashi@protonmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["chrono", "postgres"] }
jsonwebtoken = "7.1.1"
lazy_static = "1.4.0"
pwhash = "0.3"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
